# rusty-yt-dlp-gui

./: .gitignore  Cargo.toml  LICENSE  README.md
locales/en-US/fluent/: main.ftl
locales/es-ES/fluent/: main.ftl
src/: app.rs  download.rs  localizations.rs  main.rs  models.rs  theme.rs
src/ui/: mod.rs
